k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-demo-app-svc
spec:
  type: LoadBalancer
  selector:
    app: aks-demo-app
  ports:
    - port: 80
      targetPort: 5000
